--- a/blogproject_files/templates/base.html
+++ b/blogproject_files/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MyBlog</title>
+    <title>CMD</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
@@ -15,7 +15,7 @@
     <div id="layout" class="pure-g">
         <div class="sidebar pure-u-1 pure-u-md-1-4">
             <div class="header">
-                <h1 class="brand-title">Rico Blog</h1>
+                <h1 class="brand-title">Rico CMD</h1>
                 <h2 class="brand-tagline">free</h2>
                 <nav class="nav">
                     <ul class="nav-list">
