继续完善中

--- a/blogproject_files/templates/home.html
+++ b/blogproject_files/templates/home.html
@@ -5,22 +5,23 @@
     {% for post in post_list %} <!-- post_list来自view -->
         <section class="post">
             <header class="post-header">
-                <h2 class="post-title">{{ post.title }}</h2>
+                <h2 class="post-title">'{% url "demo" id=post.id %}'>{{ post.title }}</h2>
                 <h2 class="post-title">{{ post.id }}</h2>
                 <h2 class="post-title">{{ post.excerpt }}</h2>
-                <h2 class="post-title">{{ post.modified_time }}</h2>
+                                 <h2 class="post-title">{{ post.modified_time }}</h2>
                 <h2 class="post-title">{{ post.author_id }}</h2>
 
                     <p class="post-meta">
-                        Time:  <a class="post-author" href="#">{{ post.create_time }}</a> <a class="post-category post-category-js" href="#">{{ post.category_id }}</a>
+                        Time:  <a class="post-author" href="#">{{ post.create_time | date:"Y /m /d"}}</a> <a class="post-category post-category-js" href="#">{{ post.category_id }}</a>
                     </p>
             </header>
 
                 <div class="post-description">
                     <p>
-                        <!--{{ post.content }}-->
+                        {{ post.content }}
                     </p>
                 </div>
+             <a class="pure-button" href='{% url "demo" id=post.id %}'>Read More</a>
         </section>
     {% endfor %}
 </div><!-- /.blog-post -->
