--- a/blogproject_files/templates/test.html
+++ b/blogproject_files/templates/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>TEST</title>
     <style>
-            body{
+            #T1{
                background-color: red;
             }
             em {
@@ -13,7 +13,7 @@
      </style>
 </head>
 <body>
-    <h1>Not 404(Not Four)!</h1>
+    <h1 id ="T1">Not 404(Not Four)!</h1>
     <strong>{{ current_time }}</strong> <br>
     <strong>{{ value_Kye }}</strong>
 </body>
